Plateau ajout d'un constructeur par recopie
Creation de la classe NoeudMinMax qui servira de noeuds dans la fonction
recursive de minmax

--- a/tic_tac_toe.cbp
+++ b/tic_tac_toe.cbp
@@ -45,6 +45,7 @@
 		<Unit filename="Plateau.cpp" />
 		<Unit filename="Plateau.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="templates.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
